WIP: Partial Auth0 integration in Swagger UI; working on nested schemas – not ready for merge
